--- a/traning2-1-10/traning2-1-10/Base.lproj/Main.storyboard
+++ b/traning2-1-10/traning2-1-10/Base.lproj/Main.storyboard
@@ -1,26 +1,84 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="rsb-PV-NKw"/>
+                        <viewControllerLayoutGuide type="bottom" id="eh5-dl-gCb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="64" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BU6-Im-Vn5">
+                                <rect key="frame" x="5" y="30" width="365" height="632"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" tag="1" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="64" id="msY-2Q-Wef">
+                                        <rect key="frame" x="0.0" y="28" width="365" height="64"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="msY-2Q-Wef" id="xZL-FG-jZe">
+                                            <rect key="frame" x="0.0" y="0.0" width="365" height="64"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QYc-Y2-Eur">
+                                                    <rect key="frame" x="318" y="5" width="42" height="53.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7UJ-1U-KIl">
+                                                    <rect key="frame" x="23" y="5" width="72" height="51"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="7UJ-1U-KIl" secondAttribute="height" multiplier="4:3" id="YZv-wt-GYV"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="7UJ-1U-KIl" firstAttribute="centerY" secondItem="xZL-FG-jZe" secondAttribute="centerY" id="6gv-C2-3do"/>
+                                                <constraint firstItem="QYc-Y2-Eur" firstAttribute="top" secondItem="xZL-FG-jZe" secondAttribute="top" constant="5" id="DPy-ED-3BI"/>
+                                                <constraint firstAttribute="bottom" secondItem="QYc-Y2-Eur" secondAttribute="bottom" constant="5" id="gzR-9A-3YB"/>
+                                                <constraint firstItem="QYc-Y2-Eur" firstAttribute="leading" secondItem="7UJ-1U-KIl" secondAttribute="trailing" constant="15" id="jBY-jY-D20"/>
+                                                <constraint firstItem="7UJ-1U-KIl" firstAttribute="centerX" secondItem="xZL-FG-jZe" secondAttribute="centerX" constant="0.29999999999999999" id="rka-MV-3dE"/>
+                                                <constraint firstAttribute="trailing" secondItem="QYc-Y2-Eur" secondAttribute="trailing" constant="5" id="yBF-dn-cEQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="BU6-Im-Vn5" firstAttribute="top" secondItem="rsb-PV-NKw" secondAttribute="bottom" constant="10" id="12c-Ms-J2m"/>
+                            <constraint firstAttribute="trailing" secondItem="BU6-Im-Vn5" secondAttribute="trailing" constant="5" id="bjd-oN-Q6l"/>
+                            <constraint firstItem="BU6-Im-Vn5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="5" id="cBf-PT-oLv"/>
+                            <constraint firstItem="eh5-dl-gCb" firstAttribute="top" secondItem="BU6-Im-Vn5" secondAttribute="bottom" constant="5" id="mhz-2I-aZl"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mainTableView" destination="BU6-Im-Vn5" id="Kb3-O7-Qnl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="85.5" y="146.5"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+    </simulatedMetricsContainer>
 </document>
