--- a/traning2-1-10/traning2-1-10/Base.lproj/Main.storyboard
+++ b/traning2-1-10/traning2-1-10/Base.lproj/Main.storyboard
@@ -23,46 +23,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="104" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MyN-A4-AzG">
-                                <rect key="frame" x="21" y="5" width="333" height="657"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MyN-A4-AzG">
+                                <rect key="frame" x="36" y="5" width="318" height="657"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="104" id="8Nr-f1-WKG">
-                                        <rect key="frame" x="0.0" y="28" width="333" height="104"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="90" id="8Nr-f1-WKG">
+                                        <rect key="frame" x="0.0" y="28" width="318" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Nr-f1-WKG" id="VYs-Gg-qDO">
-                                            <rect key="frame" x="0.0" y="0.0" width="333" height="104"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="318" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RYF-em-nZx">
-                                                    <rect key="frame" x="8" y="10" width="108" height="82"/>
+                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RYF-em-nZx">
+                                                    <rect key="frame" x="5" y="-15.5" width="90" height="120.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="RYF-em-nZx" secondAttribute="height" multiplier="3:4" id="3bd-ho-bRe"/>
+                                                        <constraint firstAttribute="height" constant="120" id="AuW-ly-Nnz"/>
+                                                        <constraint firstAttribute="width" secondItem="RYF-em-nZx" secondAttribute="height" multiplier="3:4" id="zsf-cF-7RY"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Owe-jX-hTe">
-                                                    <rect key="frame" x="134" y="13" width="196" height="73"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FOB-6u-gih">
+                                                    <rect key="frame" x="105" y="13" width="200" height="63.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="RYF-em-nZx" firstAttribute="centerY" secondItem="VYs-Gg-qDO" secondAttribute="centerY" constant="0.20000000000000001" id="4AD-dT-zlh"/>
-                                                <constraint firstItem="Owe-jX-hTe" firstAttribute="leading" secondItem="RYF-em-nZx" secondAttribute="trailing" constant="10" id="5nK-me-aBt"/>
-                                                <constraint firstItem="Owe-jX-hTe" firstAttribute="top" secondItem="VYs-Gg-qDO" secondAttribute="topMargin" constant="5" id="PVp-lg-yyv"/>
-                                                <constraint firstItem="RYF-em-nZx" firstAttribute="centerX" secondItem="VYs-Gg-qDO" secondAttribute="centerX" id="SNs-KR-2Hx"/>
-                                                <constraint firstItem="Owe-jX-hTe" firstAttribute="trailing" secondItem="VYs-Gg-qDO" secondAttribute="trailingMargin" constant="5" id="eNF-KN-w7B"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Owe-jX-hTe" secondAttribute="bottom" constant="10" id="yUE-ni-Lcn"/>
+                                                <constraint firstItem="RYF-em-nZx" firstAttribute="centerY" secondItem="VYs-Gg-qDO" secondAttribute="centerY" id="AHu-jF-3Nw"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="FOB-6u-gih" secondAttribute="trailing" constant="5" id="Awe-AJ-sNP"/>
+                                                <constraint firstItem="FOB-6u-gih" firstAttribute="leading" secondItem="RYF-em-nZx" secondAttribute="trailing" constant="10" id="b1v-45-VhX"/>
+                                                <constraint firstItem="RYF-em-nZx" firstAttribute="leading" secondItem="VYs-Gg-qDO" secondAttribute="leading" constant="5" id="bJC-oA-jtv"/>
+                                                <constraint firstItem="FOB-6u-gih" firstAttribute="top" secondItem="VYs-Gg-qDO" secondAttribute="topMargin" constant="5" id="eau-QW-sWU"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="FOB-6u-gih" secondAttribute="bottom" constant="5" id="huH-GQ-nMD"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="aDB-XY-Bwy"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="m06-ir-XZM"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="MyN-A4-AzG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="4gg-9E-uTo"/>
+                            <constraint firstItem="MyN-A4-AzG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="4gg-9E-uTo"/>
                             <constraint firstAttribute="trailingMargin" secondItem="MyN-A4-AzG" secondAttribute="trailing" constant="5" id="CaL-kh-bg1"/>
                             <constraint firstItem="MyN-A4-AzG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="5" id="fKc-V9-8sv"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MyN-A4-AzG" secondAttribute="bottom" constant="5" id="gr1-de-BP3"/>
