--- a/traning2-1-2/traning2-1-2/Base.lproj/Main.storyboard
+++ b/traning2-1-2/traning2-1-2/Base.lproj/Main.storyboard
@@ -21,18 +21,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BwSPGdrCIAAGznl" translatesAutoresizingMaskIntoConstraints="NO" id="rGO-6J-5Ts" userLabel="mainImage">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="talk to the engineer" translatesAutoresizingMaskIntoConstraints="NO" id="rGO-6J-5Ts" userLabel="mainImage">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1by-JM-qgg"/>
-                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9sa-Pf-Eok"/>
-                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9vF-Ax-dUs"/>
-                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MhB-Zq-HSw"/>
-                            <constraint firstAttribute="bottom" secondItem="rGO-6J-5Ts" secondAttribute="bottom" id="X65-xf-cYo"/>
-                            <constraint firstAttribute="trailing" secondItem="rGO-6J-5Ts" secondAttribute="trailing" id="t4S-HV-7tI"/>
+                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="3l5-IK-nQA"/>
+                            <constraint firstAttribute="trailing" secondItem="rGO-6J-5Ts" secondAttribute="trailing" id="ORW-Oc-eFT"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rGO-6J-5Ts" secondAttribute="bottom" id="lIy-FQ-DXQ"/>
+                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pW5-nx-Vck"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -42,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BwSPGdrCIAAGznl" width="600" height="938"/>
+        <image name="talk to the engineer" width="600" height="938"/>
     </resources>
 </document>
