--- a/traning2-1-10/traning2-1-10/Base.lproj/Main.storyboard
+++ b/traning2-1-10/traning2-1-10/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,38 +23,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MyN-A4-AzG">
-                                <rect key="frame" x="36" y="5" width="318" height="657"/>
+                                <rect key="frame" x="21" y="20" width="333" height="642"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="90" id="8Nr-f1-WKG">
-                                        <rect key="frame" x="0.0" y="28" width="318" height="90"/>
+                                        <rect key="frame" x="0.0" y="28" width="333" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Nr-f1-WKG" id="VYs-Gg-qDO">
-                                            <rect key="frame" x="0.0" y="0.0" width="318" height="90"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="333" height="89.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RYF-em-nZx">
-                                                    <rect key="frame" x="5" y="-15.5" width="90" height="120.5"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="120" id="AuW-ly-Nnz"/>
-                                                        <constraint firstAttribute="width" secondItem="RYF-em-nZx" secondAttribute="height" multiplier="3:4" id="zsf-cF-7RY"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FOB-6u-gih">
-                                                    <rect key="frame" x="105" y="13" width="200" height="63.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="RYF-em-nZx" firstAttribute="centerY" secondItem="VYs-Gg-qDO" secondAttribute="centerY" id="AHu-jF-3Nw"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="FOB-6u-gih" secondAttribute="trailing" constant="5" id="Awe-AJ-sNP"/>
-                                                <constraint firstItem="FOB-6u-gih" firstAttribute="leading" secondItem="RYF-em-nZx" secondAttribute="trailing" constant="10" id="b1v-45-VhX"/>
-                                                <constraint firstItem="RYF-em-nZx" firstAttribute="leading" secondItem="VYs-Gg-qDO" secondAttribute="leading" constant="5" id="bJC-oA-jtv"/>
-                                                <constraint firstItem="FOB-6u-gih" firstAttribute="top" secondItem="VYs-Gg-qDO" secondAttribute="topMargin" constant="5" id="eau-QW-sWU"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="FOB-6u-gih" secondAttribute="bottom" constant="5" id="huH-GQ-nMD"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -67,10 +43,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="MyN-A4-AzG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="4gg-9E-uTo"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="MyN-A4-AzG" secondAttribute="trailing" constant="5" id="CaL-kh-bg1"/>
-                            <constraint firstItem="MyN-A4-AzG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="5" id="fKc-V9-8sv"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MyN-A4-AzG" secondAttribute="bottom" constant="5" id="gr1-de-BP3"/>
+                            <constraint firstItem="MyN-A4-AzG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="5vB-n5-y64"/>
+                            <constraint firstItem="MyN-A4-AzG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="20" id="Vq2-RD-LFw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MyN-A4-AzG" secondAttribute="bottom" constant="5" id="bUY-TQ-eAp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MyN-A4-AzG" secondAttribute="trailing" constant="5" id="lA0-dW-SuC"/>
                         </constraints>
                     </view>
                     <connections>
